<resources>
    <string name="app_name">মাহে রমজান ২০১৮</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">193073274660774</string>
    <string name="fb_login_protocol_scheme">fb193073274660774</string>
    <string name="DATE_CHANGED_ACTION">com.walletmix.maheromjan.date_changed</string>
    <string name="action_settings">Settings</string>
    <string name="sehri">সাহরী</string>
    <string name="iftar">ইফতার</string>
    <string name="rujarNiotOEftarerDuaTitle">রোজার নিয়ত, ইফতারের দোয়া</string>
    <string name="sehriIfterTime">সেহরি ও ইফতারের সময়সূচী</string>
    <string name="rujaVongerKaronTitle">রোজা ভঙ্গের কারণ</string>
    <string name="rujaVongerKaronNoiTitle">রোজা ভঙ্গের কারণ নয়</string>
    <string name="rujaVongerKaronNoiTitleTwo">রোজা ভঙ্গের কারণ নয়</string>
    <string name="maheRomjanerFojilot">মাহে রমজানের তাৎপর্য ও ফজিলত</string>
    <string name="ShobeKodorerFojilot">শবে কদরের ফজিলত এবং আমল </string>
    <string name="islamikGan">ইসলামিক গান</string>
    <string name="kuranTilaoat">কোরআন তিলাওয়াত</string>
    <string name="shareKorun">অ্যাপটি ফেইসবুকে শেয়ার করুন</string>
    <string name="ratingDin">রেটিং দিন </string>
    <string name="rujarNiotTitle">রোজার নিয়ত</string>
    <string name="iftarirDuaTitle">ইফতারের দোয়া</string>
    <string name="ajkerIftarerSomoi">আজকের ইফতারের সময়</string>
    <string name="ajkerSehrirShesSomoi">আজকের সাহরীর শেষ সময়</string>
    <string name="sehrirSomoiBaki">সাহরীর সময় বাকী</string>
    <string name="iftarerSomoiBaki">ইফতারের সময় বাকী</string>
    <string name="settings">সেটিংস</string>
    <string name="iftareAjan">ইফতারে আজান</string>
    <string name="jelaPoribortonKorun">জেলা পরিবর্তন করুন</string>
    <string name="shagotomTitle">মাহে রমজান ২০১৮ তে</string>
    <string name="apnarJelaNirbachonKorun">আপনার জেলা নির্বাচন করুন</string>
    <string name="shagotom">আপনাকে স্বাগতম</string>
    <string name="Manikganj">মানিকগঞ্জ</string>
    <string name="shobeKodorerBornona">২৬ রমজান। এ দিন শেষে যে রাত আসে, তা ২৭ রমজানের রাত। এটি \'শবেকদর\' বা \'লাইলাতুল কদর\' হওয়ার সম্ভাবনা খুবই বেশি। তাই এই দিনটিকে এ দেশের মুসলমানরা অত্যন্ত গুরুত্বের সঙ্গে পালন করে।
এই রাতকে \'লাইলাতুল কদর\' বা কদরের রজনী কেন বলা হয়, এ ব্যাপারে মুফাস্সিরে কেরাম বেশ কয়েকটি ব্যাখ্যা প্রদান করেছেন। \'কদর\' শব্দের অর্থ পরিমাণ নির্ধারণ ও হুকুম। যেহেতু এ রাতে সৃষ্টিকুলের ভাগ্যলিপিতে নির্ধারিত অংশের যেটুকু এ রমজান থেকে পরবর্তী রমজান পর্যন্ত বাস্তবায়নযোগ্য, তা ব্যবস্থাপনার দায়িত্বে আদিষ্ট ফেরেশতাদের কাছে স্থানান্তর করা হয়। তাই এই রাতের নামকরণ করা হয় \'লাইলাতুল কদর\'।\n\n
আবার কদর শব্দের আরেকটি অর্থ হলো- সম্মান, মাহাত্ম্য। আবু বকর ওয়াররাক (রহ.) বলেন, এই রাতের নাম \'কদরের রাত\' এ জন্য বলা হয়েছে যে এ রাতের মর্যাদা ও মাহাত্ম্যপূর্ণ কিতাব আল কোরআন মর্যাদাবান ফেরেশতা জিবরাঈল (আ.) নিয়ে আসেন সর্বশ্রেষ্ঠ মর্যাদার অধিকারী সর্বশেষ নবী মুহাম্মদ (সা.)-এর কাছে।\n
</string>
    <string name="shobeKodorerFojilotT">শবে কদরের ফজিলত</string>
    <string name="shobeKodorerFojilotD">\nলাইলাতুল কদরের সবচেয়ে বড় বৈশিষ্ট্য হলো- এ গৌরবময় রজনীতে মানবজাতির পথপ্রদর্শক ও মুক্তির সনদ ঐশীগ্রন্থ \'আল কোরআন\' অবতীর্ণ হয়েছে। শবেকদর সম্পর্কে কোরআন মাজিদে ইরশাদ হয়েছে, \'নিশ্চয়ই আমি কোরআন নাজিল করেছি লাইলাতুল কদরে। আপনি কি জানেন লাইলাতুল কদর কী? লাইলাতুল কদর হাজার মাসের চেয়েও উত্তম। (সুরা কদর : ১-৩) এটি শ্রেষ্ঠতম রাত। এ রাতের ইবাদতে রয়েছে সবিশেষ গুরুত্ব। হাদিস শরিফে এসেছে, \'যে ব্যক্তি ইমানের সঙ্গে সওয়াবের আশায় কদরের রাতে ইবাদত করবে তার পূর্ববর্তী সব গুনাহ মাফ করে দেওয়া হবে।\' (মুসলিম : ৭৬০; বুখারি : ২০১৪)</string>
    <string name="sataishTomoRatKiShobeKodorT">সাতাইশতম রজনী কি শবে কদর?</string>
    <string name="sataishTomoRatKiShobeKodorD">\nশবেকদর সম্পর্কে সর্বাধিক বিশুদ্ধ ও বিতর্কমুক্ত অভিমত হলো, শবেকদর শেষ দশকের বেজোড় রাতগুলোতেই হওয়ার সম্ভাবনা বেশি। একান্ত যদি এটা কারো জন্য সম্ভবপর হয়ে না ওঠে, তাহলে সাতাইশতম রাত্রিতে কিছুতেই গাফেল থাকা উচিত নয়। বিশেষ করে ওই দিন মাগরিব ও এশার নামাজ মসজিদে গিয়ে জামায়াতের সঙ্গে আদায় করলে হাদিসের ভাষ্য অনুযায়ী সেও শবেকদরের ফজিলত পেয়ে যাবে। এ ক্ষেত্রে কেউ কেউ বলে থাকেন, সাতাইশতম রজনীকে অধিক গুরুত্ব দেওয়া অবৈধ কিংবা বেদআত! অথচ এর সপক্ষে হাদিস ও সাহাবায়ে কেরামদের আমল রয়েছে।
হজরত শুবা (রহ.) থেকে বর্ণিত, তিনি বলেন, হজরত উবাই ইবনে কাব (রা.) শবেকদরের রাত্রিতে বলেন, \'আল্লাহর শপথ করে বলছি, আমি তা সম্পর্কে অবগত আছি। (আর তা হলো সাতাইশতম রাত্রি) কেননা রাসুল (সা.) এ রাতে আমাদের নামাজে দাঁড়াতে আদেশ করতেন।\' (মুসলিম, হা: ৭৬২) অনুরূপ ধারণা পোষণ করতেন হজরত মুয়াবিয়া (রা.), হজরত ইবনে আব্বাস (রা.), হজরত হাসান (রা.) ও আবদুল্লাহ ইবনে যুবাইর (রা.)। (কুরতুবি)</string>
    <string name="shobeKodorerAmloT">শবে কদরের আমল</string>
    <string name="shobeKOdorerAmolD">\nহাদিস শরিফে এসেছে, রাসুল (সা.) বলেন,\'আমি তোমাদের শবেকদর সম্পর্কে অবগত করানোর জন্য বের হয়ে এসেছিলাম। কিন্তু অমুক অমুক ব্যক্তির ঝগড়ার কারণে আমাকে তা ভুলিয়া দেওয়া হয়েছে।\' (বুখারি) সুতরাং দুই ব্যক্তি বা পরিবারের মধ্যকার ঝগড়াবিবাদ মিটিয়ে দেওয়া এ রাতের অন্যতম ইবাদত।
তা ছাড়া হজরত আয়েশা (রা.) বলেন, আমি রাসুল (সা.)-কে জিজ্ঞেস করেছিলাম, হে আল্লাহর রাসুল (সা.)! যদি আমি শবেকদর পেয়ে যাই, তবে আল্লাহর কাছে কী দোয়া করব? রাসুল (সা.) বলেন, এ দোয়া পড়বে- \'আল্লাহুম্মা ইন্নকা আফুয়্যুম তুহিব্বুল আফওয়া ফা\'ফু আন্নি।\' অর্থ : \'হে আল্লাহ! আপনি ক্ষমাকারী এবং আপনি ক্ষমাকে পছন্দ করেন। সুতরাং আপনি আমাকে ক্ষমা করে দিন।\'\n\nএ ছাড়া পবিত্র এ রাতে যেকোনো নফল ইবাদত করা যেতে পারে।\n</string>
    <string name="rujarNiotT">রোজার নিয়ত</string>
    <string name="iftarerDuaT">ইফতারের দোয়া</string>
    <string name="rujarNiotD">ويت ان اصوم غدا من شهر رمضان المبارك فرضا لك ياالله فتقبل منى انك انت السميع العليم.

\n\nবাংলায় উচ্চারণ: নাওয়াইতু আন আছুমা গদাম মিন শাহরি রমাদ্বানাল মুবারকি ফারদ্বল্লাকা ইয়া আল্লাহু ফাতাক্বব্বাল মিন্নী ইন্নাকা আংতাস সামীউল আলীম।

\n\nবাংলায় অর্থ: হে আল্লাহ পাক! আপনার সন্তুষ্টির জন্য আগামীকালের রমাদ্বান শরীফ-এর ফরয রোযা রাখার নিয়ত করছি। আমার তরফ থেকে আপনি তা কবুল করুন। নিশ্চয়ই আপনি সর্বশ্রোতা , সর্বজ্ঞাত।</string>
    <string name="iftarerDuaD">\nاللهم لك صمت و على رزقك افطرت.\n

\nবাংলায় উচ্চারণ: আল্লাহুম্মা সুমতু লাকা, ওয়া তাওআক্কালতু আ‘লা রিঝক্বিকা, ওয়া আফতারতু বিরাহমাতিকা ইয়া আরহামার রহিমীন\n\nবাংলায় অর্থ: হে আল্লাহ পাক! আমি আপনারই সন্তুষ্টির জন্য রোযা রেখেছি এবং আপনারই দেয়া রিযিক্ব দ্বারা ইফতার করছি।</string>
    <string name="iftarerduaBangla">
       বাংলায় উচ্চারণ: আল্লাহুম্মা সুমতু লাকা, ওয়া তাওআক্কালতু আ‘লা রিঝক্বিকা, ওয়া আফতারতু বিরাহমাতিকা ইয়া আরহামার রহিমীন\n\nবাংলায় অর্থ: হে আল্লাহ পাক! আমি আপনারই সন্তুষ্টির জন্য রোযা রেখেছি এবং আপনারই দেয়া রিযিক্ব দ্বারা ইফতার করছি।
    </string>
    <string name="suraIasinBanglaOrthoSoho">সূরা ইয়াসিন বাংলা অর্থসহ</string>
    <string name="tarikh">তারিখ</string>
    <string name="bar">বার</string>
    <string name="sehree">সাহরী</string>
    <string name="iftaar">ইফতার</string>
    <string name="ad_unit_id">ca-app-pub-7822610760721075/8997924444</string>
</resources>