<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ShobeKodorerFojilotActvity">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mediumPadding"
                android:text="@string/shobeKodorerBornona"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/mediumPadding"
                android:padding="@dimen/mediumPadding"
                android:layout_marginRight="@dimen/mediumPadding"
                android:layout_marginBottom="@dimen/smallPadding"
                android:text="@string/shobeKodorerFojilotT"
                android:textColor="@color/white"
                android:textSize="@dimen/largeText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shobeKodorerFojilotD"
                android:layout_marginBottom="@dimen/padding"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:padding="@dimen/mediumPadding"
                android:text="@string/sataishTomoRatKiShobeKodorT"
                android:layout_marginRight="@dimen/mediumPadding"
                android:textSize="@dimen/largeText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sataishTomoRatKiShobeKodorD"
                android:layout_marginBottom="@dimen/padding"
                android:textSize="@dimen/normalText" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:background="@color/colorAccent"
                android:padding="@dimen/mediumPadding"
                android:text="@string/shobeKodorerAmloT"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/mediumPadding"
                android:textSize="@dimen/largeText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shobeKOdorerAmolD"
                android:textSize="@dimen/normalText" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
