<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:background="@color/colorPrimary"
    tools:context="com.walletmix.maheromjan.Activity.WelComeToMaheRamjanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shagotomTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/veryveryLargeText"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:text="@string/shagotom"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:orientation="vertical">
        <Button
            android:id="@+id/jelaNirbachonButton"
            android:layout_width="250dp"
            android:background="@color/colorAccent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:text="@string/apnarJelaNirbachonKorun"/>

    </LinearLayout>

</RelativeLayout>
