<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.walletmix.maheromjan.Activity.SettingsActivity">

    <LinearLayout
        android:id="@+id/jelaPoribortonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jelaPoribortonKorun"
            android:textSize="@dimen/normalText" />

        <TextView
            android:id="@+id/jelaNameAtJElaPoribortonTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Manikganj"
            android:textSize="@dimen/mediumText" />
    </LinearLayout>

    <View style="@style/VerticalDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/iftareAjan"
            android:textSize="@dimen/normalText" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/iftarAjan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View style="@style/VerticalDivider" />
</LinearLayout>
