<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/mediumPadding"
        android:layout_height="100dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/normalText"
               android:text="মানিকগঞ্জ "/>
       </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iftarerSomoiBaki"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/mediumPadding"/>

    <View style="@style/VerticalDivider"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="03:30:21"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/timeText"/>
    </LinearLayout>
    <View style="@style/VerticalDivider"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/normalText"
            android:textColor="@color/black"
            android:text="@string/iftarirDuaTitle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iftarerduaBangla"/>
    </LinearLayout>

</LinearLayout>